Add post ISO Blockchain

--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -77,6 +77,7 @@ article {
         color:#fff;
         font-weight:300;
         margin:0 0 1.5em;
+        text-align: justify;
     }
     
     
