--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% if page.title %}{{ site.inc.title }}{% else %}{{ site.inc.subtitle }}{% endif %}</title>
+    <title>{{ site.inc.title }} - {{ site.inc.subtitle }}</title>
     {% if site.inc.google_font %}<link href="https://fonts.googleapis.com/css?family={{ site.inc.google_font }}" rel="stylesheet" type="text/css">{% endif %}
     <link href="/css/blog.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/{{ site.inc.jquery }}/jquery.min.js"></script>
